Update the commandline to accept configuration as flags alongside environment variables Add support for exporting the expiration time of any access service tokens in a given account

--- a/exporter/Makefile
+++ b/exporter/Makefile
@@ -6,6 +6,7 @@ fmt:
 get:
 	GOPATH="$$PWD" go get github.com/prometheus/client_golang/prometheus
 	GOPATH="$$PWD" go get github.com/cloudflare/cloudflare-go
+	GOPATH="$$PWD" go get gopkg.in/alecthomas/kingpin.v2
 
 build:
 	GOPATH="$$PWD" CGO_ENABLED=0 go build .
